# minispeech

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
docs/: architecture.md  vocoders.md
npu/: config_conv2.json  config_enc_ax650_mixprec.json  config_enc_ax650_mse.json  config_enc_ax650_pa.json  config_enc_ax650_percentile.json  config_enc_ax650_real.json  config_enc_d64_dec.json  config_enc_d64_dec_ax650.json  config_enc_d64_enc.json  config_enc_d64_enc_ax650.json  config_ffn.json  config_front.json  config_istft_tail.json  config_l2.json  config_l2_620e.json  config_le.json  config_lin.json  config_ln.json  config_nr.json  config_optest_ax650.json  config_tln.json  config_vocos_d64.json  config_vocos_d64_ax650.json  config_vocos_d64_pa.json  fs_dec_AX620E_u16_npu2.json  fs_dec_AX650_u16.json  fs_dec_AX650_u16_npu3.json  fs_enc_AX620E_u16_npu2.json  fs_enc_AX650_u16.json  fs_enc_AX650_u16_npu3.json  sqzw_a256_c128_q_AX650_u16_npu3.json  sqzw_c64_f8_l4_s_AX650_u16_npu3.json  vocoder_AX620E_u16_npu2.json  vocoder_AX650_u16.json  vocoder_AX650_u16_npu3.json  vocoder_AX650_u8.json
onnx_v2/: README.md  optimize_onnx.py  synth_onnx.py
scripts/: make_mp4.py  precompute_mel.py  run_all_decoders.sh  run_fs.sh  run_fs_ft.sh  run_jsut_all.sh  run_ms.sh  run_ms_ft.sh  run_vocos.sh  train_d256.sh  train_enc_sweep.sh  train_sweep2.sh
src/cli/: bake_bnrecal.py  eval_hifigan.py  eval_mbistft.py  eval_stft.py  eval_vocos.py  export_npu.py  export_onnx.py  export_onnx_all.py  finetune_aux.py  finetune_gan.py  infer.py  (+8 more)
(+62 files in other folders)
